force-app/main/default/objects/Draw_Down_Profile__c/Draw_Down_Profile__c.object-meta.xml
<CustomObject>
    <description>Case#141 - When an Opportunity and a qualifying Product (Lending / Deposits / Commitments) has been loaded then the user needs to be able to capture the flows / drawdowns and the dates of these transactions on the Product.</description>
    <label>Draw Down Profile</label>
    <nameField>
        <displayFormat>DDP-{0000000000}</displayFormat>
        <label>Draw Down Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Draw Down Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>