force-app/main/default/objects/Draw_Down_Profile__c/fields/Draw_Down_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Draw_Down_Maturity_Date__c</fullName>
    <description>Case#141 - Rudolf Niehaus</description>
    <label>Draw Down Maturity Date</label>
    <type>Date</type>
</CustomField>