force-app/main/default/objects/Draw_Down_Profile__c/fields/Draw_Down_Number__c.field-meta.xml
<CustomField>
    <fullName>Draw_Down_Number__c</fullName>
    <description>Case#141 - Rudolf Niehaus
This field increments for each draw down record per parent product.</description>
    <label>Draw Down Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>