force-app/main/default/objects/Draw_Down_Profile__c/fields/Funding_Required__c.field-meta.xml
<CustomField>
    <fullName>Funding_Required__c</fullName>
    <description>Case#141 - Rudolf Niehaus</description>
    <label>Funding Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>