force-app/main/default/objects/Draw_Down_Profile__c/fields/IgnoreDrawDownValidation__c.field-meta.xml
<CustomField>
    <fullName>IgnoreDrawDownValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case#141 - Rudolf Niehaus 
If this flag gets updated, then validation rules can use this flag to skip validation with the ISCHANGED() function. The reason is that we do not want the validation to run when we update Draw Downs, else the validation will run into an endless loop</description>
    <label>IgnoreDrawDownValidation</label>
    <type>Checkbox</type>
</CustomField>