force-app/main/default/objects/Draw_Down_Profile__c/fields/IsRequiredRecord__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case#141 - Rudolf Niehaus
A hidden Boolean flag that gets set at run time to ensure the first record is required on teh Vf page when users add draw down profile records to a product.</description>
    <label>IsRequiredRecord</label>
    <type>Checkbox</type>
</CustomField>