force-app/main/default/objects/Draw_Down_Profile__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Case#141 - Rudolf Niehaus
Master detail relationship to product (Lending / Deposits / Commitments)</description>
    <label>Product</label>
    <referenceTo>SB_Product__c</referenceTo>
    <relationshipLabel>Draw Down Profiles</relationshipLabel>
    <relationshipName>Draw_Down_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>