force-app/main/default/objects/Draw_Down_Profile__c/fields/Residual_Undrawn__c.field-meta.xml
<CustomField>
    <fullName>Residual_Undrawn__c</fullName>
    <description>Case#141 - Rudolf Niehaus
Calculated (Notional Val SB Underwrite – Sell Down – Funding Required Rollup)</description>
    <formula>(Product__r.SB_Gross_Participation__c  -  Product__r.Sell_Down__c  - Product__r.Funding_Required_Rollup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Residual Undrawn = Notional Value (SB Underwrite) - Sell Down Value - Total Draw Down Funding Required</inlineHelpText>
    <label>Residual Undrawn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>