force-app/main/default/objects/Draw_Down_Profile__c/fields/Weighted_Funding_Required__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Funding_Required__c</fullName>
    <description>case# 141 - Rudolf Niehaus
Draw Down Funding Required *  Opportunity Probability</description>
    <formula>Funding_Required__c  *  Product__r.Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Draw Down Funding Required time the Opportunity Probability</inlineHelpText>
    <label>Weighted Funding Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>